# embedded-ads1220

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/embassy-stm32/: Cargo.toml
src/: lib.rs
