[package]
edition = "2021"
name = "embassy-stm32"
version = "0.1.0"
license = "MIT"

[dependencies]
embedded-ads1220 = { version = "0.1.0", path = "../..", features = ["defmt"]}

embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features = ["defmt", "stm32f429zi", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", version = "0.6.0", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", version = "0.6.1", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", version = "0.2.0", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2"

[profile.release]
debug = 2
